# upper-case-lower-case-einstein-notation

./: Dockerfile  README.md
einsql/: __init__.py  einsql.py  test.py
postgres-mkl/: CMakeLists.txt  einsql.c  matmul.c
qiskit/: run_qasm.py  unitary_synthesis.py
src/: einsql.py  gan_sparse_amazon.py  gan_sparse_citation_full.py  gan_sparse_planetoid.py  gan_sparse_test.py  run_postgresql_2steps.py
